fixed carousel overflow problem

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -136,3 +136,8 @@ thead {
     width: 50%
   }
 }
+
+.carousel-inner {
+  height: 250px;
+  overflow: hidden;
+}
